syntax = "proto3";
option go_package="eventService";

import "google/protobuf/timestamp.proto";

message Event {
    string event_id = 1;
    string checksum = 2;
    google.protobuf.Timestamp created_at = 3;
    string entity_type = 4;
    string entity_id = 5;
    bytes data  = 6;
}

message TestMessage {
    string message = 1;
    google.protobuf.Timestamp created_at = 2;
}